--- a/static/index.html
+++ b/static/index.html
@@ -1452,11 +1452,11 @@
         </div>
 
         <div class="content-body">
-          <!-- Cookie筛选 -->
+          <!-- Cookie筛选和搜索 -->
           <div class="card mb-4">
             <div class="card-body">
               <div class="row align-items-end">
-                <div class="col-md-6">
+                <div class="col-md-4">
                   <label for="itemCookieFilter" class="form-label"
                     >筛选账号</label
                   >
@@ -1468,7 +1468,29 @@
                     <option value="">所有账号</option>
                   </select>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-4">
+                  <label for="itemTitleSearch" class="form-label"
+                    >商品标题搜索</label
+                  >
+                  <div class="input-group">
+                    <input
+                      type="text"
+                      class="form-control"
+                      id="itemTitleSearch"
+                      placeholder="输入商品标题关键词..."
+                      onkeyup="handleSearchKeyup(event)"
+                    />
+                    <button
+                      class="btn btn-outline-secondary"
+                      type="button"
+                      onclick="clearSearch()"
+                      title="清空搜索"
+                    >
+                      <i class="bi bi-x-circle"></i>
+                    </button>
+                  </div>
+                </div>
+                <div class="col-md-4">
                   <div class="d-flex justify-content-end align-items-end gap-2">
                     <!-- 页码输入 -->
                     <div class="d-flex align-items-center gap-2">
@@ -1528,6 +1550,21 @@
               </button>
             </div>
             <div class="card-body">
+              <!-- 搜索结果提示 -->
+              <div
+                id="searchResultHint"
+                class="alert alert-info mb-3"
+                style="display: none"
+              >
+                <i class="bi bi-search me-2"></i>
+                <span id="searchResultText"></span>
+                <button
+                  type="button"
+                  class="btn-close ms-auto"
+                  onclick="clearSearch()"
+                  aria-label="清空搜索"
+                ></button>
+              </div>
               <div class="table-responsive">
                 <table class="table table-hover">
                   <thead>
@@ -1556,6 +1593,36 @@
                     </tr>
                   </tbody>
                 </table>
+              </div>
+
+              <!-- 商品分页控件 -->
+              <div
+                id="itemsPaginationContainer"
+                class="d-flex justify-content-between align-items-center mt-3"
+                style="display: none !important"
+              >
+                <div class="text-muted" id="itemsPaginationInfo">
+                  显示第 1-20 条，共 0 条记录
+                </div>
+                <nav>
+                  <ul class="pagination mb-0" id="itemsPagination">
+                    <!-- 分页按钮将在这里动态生成 -->
+                  </ul>
+                </nav>
+                <div class="d-flex align-items-center">
+                  <label class="me-2">每页显示：</label>
+                  <select
+                    class="form-select form-select-sm"
+                    id="itemsPageSizeSelect"
+                    style="width: auto"
+                    onchange="changeItemsPageSize()"
+                  >
+                    <option value="10">10条</option>
+                    <option value="20" selected>20条</option>
+                    <option value="50">50条</option>
+                    <option value="100">100条</option>
+                  </select>
+                </div>
               </div>
             </div>
           </div>
@@ -7800,6 +7867,237 @@
         }
       }
 
+      // ==================== 商品搜索功能 ====================
+
+      // 全局变量
+      let originalItemsData = [];
+      let currentSearchKeyword = "";
+      let searchTimeout = null;
+
+      // 商品分页相关变量
+      let currentItemsPage = 1; // 当前页码
+      let itemsPageSize = 20; // 每页显示数量
+      let filteredItemsData = []; // 搜索过滤后的数据
+
+      // 分页显示商品数据
+      function displayItemsWithPagination(items) {
+        // 更新过滤后的数据
+        filteredItemsData = items || [];
+
+        // 计算分页信息
+        const totalItems = filteredItemsData.length;
+        const totalPages = Math.ceil(totalItems / itemsPageSize);
+
+        // 确保当前页码在有效范围内
+        if (currentItemsPage > totalPages && totalPages > 0) {
+          currentItemsPage = totalPages;
+        } else if (currentItemsPage < 1) {
+          currentItemsPage = 1;
+        }
+
+        // 计算当前页数据范围
+        const startIndex = (currentItemsPage - 1) * itemsPageSize;
+        const endIndex = startIndex + itemsPageSize;
+        const currentPageItems = filteredItemsData.slice(startIndex, endIndex);
+
+        // 显示当前页数据
+        displayItems(currentPageItems);
+
+        // 更新分页控件
+        updateItemsPagination();
+      }
+
+      // 更新分页控件
+      function updateItemsPagination() {
+        const totalItems = filteredItemsData.length;
+        const totalPages = Math.ceil(totalItems / itemsPageSize);
+        const paginationContainer = document.getElementById(
+          "itemsPaginationContainer"
+        );
+        const pagination = document.getElementById("itemsPagination");
+        const paginationInfo = document.getElementById("itemsPaginationInfo");
+
+        // 如果没有数据或只有一页，隐藏分页控件
+        if (totalItems === 0 || totalPages <= 1) {
+          paginationContainer.style.display = "none";
+          return;
+        }
+
+        // 显示分页控件
+        paginationContainer.style.display = "flex";
+
+        // 更新分页信息
+        const startItem = (currentItemsPage - 1) * itemsPageSize + 1;
+        const endItem = Math.min(currentItemsPage * itemsPageSize, totalItems);
+        paginationInfo.textContent = `显示第 ${startItem}-${endItem} 条，共 ${totalItems} 条记录`;
+
+        // 生成分页按钮
+        let paginationHtml = "";
+
+        // 上一页按钮
+        if (currentItemsPage > 1) {
+          paginationHtml += `<li class="page-item"><a class="page-link" href="#" onclick="goToItemsPage(${
+            currentItemsPage - 1
+          })">上一页</a></li>`;
+        } else {
+          paginationHtml += `<li class="page-item disabled"><span class="page-link">上一页</span></li>`;
+        }
+
+        // 页码按钮逻辑
+        if (totalPages <= 7) {
+          // 总页数不超过7页，显示所有页码
+          for (let i = 1; i <= totalPages; i++) {
+            const active = i === currentItemsPage ? "active" : "";
+            paginationHtml += `<li class="page-item ${active}"><a class="page-link" href="#" onclick="goToItemsPage(${i})">${i}</a></li>`;
+          }
+        } else {
+          // 总页数超过7页，使用省略号显示
+          if (currentItemsPage <= 4) {
+            // 当前页在前面，显示 1 2 3 4 5 ... 最后页
+            for (let i = 1; i <= 5; i++) {
+              const active = i === currentItemsPage ? "active" : "";
+              paginationHtml += `<li class="page-item ${active}"><a class="page-link" href="#" onclick="goToItemsPage(${i})">${i}</a></li>`;
+            }
+            paginationHtml += `<li class="page-item disabled"><span class="page-link">...</span></li>`;
+            paginationHtml += `<li class="page-item"><a class="page-link" href="#" onclick="goToItemsPage(${totalPages})">${totalPages}</a></li>`;
+          } else if (currentItemsPage >= totalPages - 3) {
+            // 当前页在后面，显示 1 ... 倒数5页
+            paginationHtml += `<li class="page-item"><a class="page-link" href="#" onclick="goToItemsPage(1)">1</a></li>`;
+            paginationHtml += `<li class="page-item disabled"><span class="page-link">...</span></li>`;
+            for (let i = totalPages - 4; i <= totalPages; i++) {
+              const active = i === currentItemsPage ? "active" : "";
+              paginationHtml += `<li class="page-item ${active}"><a class="page-link" href="#" onclick="goToItemsPage(${i})">${i}</a></li>`;
+            }
+          } else {
+            // 当前页在中间，显示 1 ... 当前页前后2页 ... 最后页
+            paginationHtml += `<li class="page-item"><a class="page-link" href="#" onclick="goToItemsPage(1)">1</a></li>`;
+            paginationHtml += `<li class="page-item disabled"><span class="page-link">...</span></li>`;
+            for (let i = currentItemsPage - 2; i <= currentItemsPage + 2; i++) {
+              const active = i === currentItemsPage ? "active" : "";
+              paginationHtml += `<li class="page-item ${active}"><a class="page-link" href="#" onclick="goToItemsPage(${i})">${i}</a></li>`;
+            }
+            paginationHtml += `<li class="page-item disabled"><span class="page-link">...</span></li>`;
+            paginationHtml += `<li class="page-item"><a class="page-link" href="#" onclick="goToItemsPage(${totalPages})">${totalPages}</a></li>`;
+          }
+        }
+
+        // 下一页按钮
+        if (currentItemsPage < totalPages) {
+          paginationHtml += `<li class="page-item"><a class="page-link" href="#" onclick="goToItemsPage(${
+            currentItemsPage + 1
+          })">下一页</a></li>`;
+        } else {
+          paginationHtml += `<li class="page-item disabled"><span class="page-link">下一页</span></li>`;
+        }
+
+        pagination.innerHTML = paginationHtml;
+      }
+
+      // 跳转到指定页
+      function goToItemsPage(page) {
+        const totalPages = Math.ceil(filteredItemsData.length / itemsPageSize);
+
+        // 验证页码范围
+        if (page < 1 || page > totalPages) {
+          return;
+        }
+
+        currentItemsPage = page;
+
+        // 重新显示当前页数据
+        displayItemsWithPagination(filteredItemsData);
+      }
+
+      // 修改每页显示数量
+      function changeItemsPageSize() {
+        const select = document.getElementById("itemsPageSizeSelect");
+        const newPageSize = parseInt(select.value);
+
+        if (newPageSize && newPageSize > 0) {
+          itemsPageSize = newPageSize;
+          currentItemsPage = 1; // 重置到第一页
+
+          // 重新显示数据
+          displayItemsWithPagination(filteredItemsData);
+        }
+      }
+
+      // 搜索输入处理函数
+      function handleSearchKeyup(event) {
+        const keyword = event.target.value.trim();
+        currentSearchKeyword = keyword;
+
+        // 支持回车键搜索
+        if (event.key === "Enter") {
+          performSearch();
+        } else {
+          // 实时搜索（防抖处理）
+          clearTimeout(searchTimeout);
+          searchTimeout = setTimeout(performSearch, 300);
+        }
+      }
+
+      // 执行搜索
+      function performSearch() {
+        const keyword = currentSearchKeyword.toLowerCase();
+
+        if (!keyword) {
+          // 无搜索词时显示所有数据
+          currentItemsPage = 1; // 重置到第一页
+          displayItemsWithPagination(originalItemsData);
+          clearSearchResultHint();
+          return;
+        }
+
+        // 过滤商品数据
+        const filteredItems = originalItemsData.filter((item) => {
+          const title = (item.item_title || "").toLowerCase();
+          return title.includes(keyword);
+        });
+
+        // 重置到第一页并显示搜索结果
+        currentItemsPage = 1;
+        displayItemsWithPagination(filteredItems);
+
+        // 更新搜索结果提示
+        updateSearchResultHint(
+          filteredItems.length,
+          originalItemsData.length,
+          keyword
+        );
+      }
+
+      // 清空搜索
+      function clearSearch() {
+        document.getElementById("itemTitleSearch").value = "";
+        currentSearchKeyword = "";
+        currentItemsPage = 1; // 重置到第一页
+        displayItemsWithPagination(originalItemsData);
+        clearSearchResultHint();
+      }
+
+      // 更新搜索结果提示
+      function updateSearchResultHint(foundCount, totalCount, keyword) {
+        const hintElement = document.getElementById("searchResultHint");
+        const textElement = document.getElementById("searchResultText");
+
+        if (foundCount === 0) {
+          textElement.innerHTML = `未找到包含 "<strong>${keyword}</strong>" 的商品（共 ${totalCount} 个商品）`;
+          hintElement.className = "alert alert-warning mb-3";
+        } else {
+          textElement.innerHTML = `找到 <strong>${foundCount}</strong> 个商品（共 ${totalCount} 个）- 搜索关键词："<strong>${keyword}</strong>"`;
+          hintElement.className = "alert alert-info mb-3";
+        }
+
+        hintElement.style.display = "block";
+      }
+
+      // 清除搜索结果提示
+      function clearSearchResultHint() {
+        const hintElement = document.getElementById("searchResultHint");
+        hintElement.style.display = "none";
+      }
+
       // 加载商品列表
       async function loadItems() {
         try {
@@ -7919,7 +8217,16 @@
 
           if (response.ok) {
             const data = await response.json();
-            displayItems(data.items);
+            // 保存原始数据用于搜索
+            originalItemsData = data.items || [];
+            // 应用当前搜索条件
+            if (currentSearchKeyword) {
+              performSearch();
+            } else {
+              currentItemsPage = 1; // 重置到第一页
+              displayItemsWithPagination(originalItemsData);
+              clearSearchResultHint();
+            }
           } else {
             throw new Error("获取商品列表失败");
           }
@@ -7950,7 +8257,16 @@
 
           if (response.ok) {
             const data = await response.json();
-            displayItems(data.items);
+            // 保存原始数据用于搜索
+            originalItemsData = data.items || [];
+            // 应用当前搜索条件
+            if (currentSearchKeyword) {
+              performSearch();
+            } else {
+              currentItemsPage = 1; // 重置到第一页
+              displayItemsWithPagination(originalItemsData);
+              clearSearchResultHint();
+            }
           } else {
             throw new Error("获取商品列表失败");
           }
